--- a/1.md
+++ b/1.md
@@ -1,1 +1,3 @@
 ![Screenshot 2022-02-11 145223](https://user-images.githubusercontent.com/55657279/153555477-b2032093-f502-4d73-aef0-8fee52acce4b.png)
+
+[Next >>](https://github.com/thanasinb/Installing-Linux/blob/c68f8fa2067cf4568eec5c0c29a2d9dfd45e6ac0/2.md)
