--- a/1_installing_Linux/1.md
+++ b/1_installing_Linux/1.md
@@ -1,4 +1,3 @@
 ![Screenshot 2022-02-11 145223](https://user-images.githubusercontent.com/55657279/153555477-b2032093-f502-4d73-aef0-8fee52acce4b.png)
 
-[Next >>](/Installing-Linux
-/2.md)
+[Next >>](/1_installing_Linux/2.md)
