--- a/1_installing_Linux/13.md
+++ b/1_installing_Linux/13.md
@@ -1,3 +1,3 @@
 ![2022-02-11 15_34_51-Window](https://user-images.githubusercontent.com/55657279/153583828-53fb7787-60ff-4488-b47f-2e719b7fdea3.png)
 
-[Next >>](14.md)
+[Next >>](/1_installing_Linux/14.md)
