--- a/1_installing_Linux/2.md
+++ b/1_installing_Linux/2.md
@@ -1,2 +1,2 @@
 ![Screenshot 2022-02-11 145315](https://user-images.githubusercontent.com/55657279/153555497-d335f68b-b025-4a57-8dd4-25254924af4a.png)
-[Next >>](3.md)
+[Next >>](/1_installing_Linux/3.md)
