--- a/1_installing_Linux/25.md
+++ b/1_installing_Linux/25.md
@@ -1,3 +1,3 @@
 ![2022-02-11 15_57_23-Ubuntu_demo  Running  - Oracle VM VirtualBox](https://user-images.githubusercontent.com/55657279/153584621-457557b6-b863-4f3b-b714-3812d4e5ad95.png)
 
-[Next >>](26.md)
+[Next >>](/1_installing_Linux/26.md)
