--- a/1_installing_Linux/33.md
+++ b/1_installing_Linux/33.md
@@ -1,4 +1,4 @@
 ![2022-02-11 19_35_07-Ubuntu_demo  Running  - Oracle VM VirtualBox](https://user-images.githubusercontent.com/55657279/153592931-5b68d7c1-3114-48a8-bbb1-3c78f4e8006a.png)
 
 
-[Next >>](34.md)
+[Next >>](/1_installing_Linux/34.md)
