--- a/1_installing_Linux/6.md
+++ b/1_installing_Linux/6.md
@@ -1,3 +1,3 @@
 ![Screenshot 2022-02-11 150757](https://user-images.githubusercontent.com/55657279/153580473-95bb6fbe-bbfc-47e3-b2b4-56bccaca0acc.png)
 
-[Next >>](7.md)
+[Next >>](/1_installing_Linux/7.md)
