--- a/1_installing_Linux/8.md
+++ b/1_installing_Linux/8.md
@@ -1,3 +1,3 @@
 ![Screenshot 2022-02-11 150940](https://user-images.githubusercontent.com/55657279/153580887-e377a826-31e8-45ee-be68-b3b9b628ce66.png)
 
-[Next >>](9.md)
+[Next >>](/1_installing_Linux/9.md)
