--- a/1_installing_Linux/12.md
+++ b/1_installing_Linux/12.md
@@ -1,3 +1,3 @@
 ![Screenshot 2022-02-11 151345](https://user-images.githubusercontent.com/55657279/153581504-6057b5ad-6b93-4577-8ccf-d77ea0ba9492.png)
 
-[Next >>](13.md)
+[Next >>](/1_installing_Linux/13.md)
