--- a/1_installing_Linux/16.md
+++ b/1_installing_Linux/16.md
@@ -1,3 +1,3 @@
 ![2022-02-11 15_42_08-Ubuntu_demo  Running  - Oracle VM VirtualBox](https://user-images.githubusercontent.com/55657279/153584042-9e1ae97c-73d4-4853-9f1d-483fe08d454e.png)
 
-[Next >>](17.md)
+[Next >>](/1_installing_Linux/17.md)
