--- a/1_installing_Linux/20.md
+++ b/1_installing_Linux/20.md
@@ -1,3 +1,3 @@
 ![2022-02-11 15_52_53-Ubuntu_demo  Running  - Oracle VM VirtualBox](https://user-images.githubusercontent.com/55657279/153584328-3f347526-0a1b-4e0c-83be-b80c39b43ada.png)
 
-[Next >>](21.md)
+[Next >>](/1_installing_Linux/21.md)
