--- a/1_installing_Linux/22.md
+++ b/1_installing_Linux/22.md
@@ -1,3 +1,3 @@
 ![2022-02-11 15_54_10-Ubuntu_demo  Running  - Oracle VM VirtualBox](https://user-images.githubusercontent.com/55657279/153584430-1830bdfc-2565-4d1c-a288-aa4e0c54ea1b.png)
 
-[Next >>](23.md)
+[Next >>](/1_installing_Linux/23.md)
