--- a/1_installing_Linux/4.md
+++ b/1_installing_Linux/4.md
@@ -1,3 +1,3 @@
 ![Screenshot 2022-02-11 150530](https://user-images.githubusercontent.com/55657279/153580062-72aa3b48-43b8-49cf-8bc1-61148f9d8351.png)
 
-[Next >>](5.md)
+[Next >>](/1_installing_Linux/5.md)
