--- a/1_installing_Linux/5.md
+++ b/1_installing_Linux/5.md
@@ -1,3 +1,3 @@
 ![Screenshot 2022-02-11 150655](https://user-images.githubusercontent.com/55657279/153580317-47f096e3-3b89-47e1-b767-9a8494801e7d.png)
 
-[Next >>](6.md)
+[Next >>](/1_installing_Linux/6.md)
