--- a/1_installing_Linux/34.md
+++ b/1_installing_Linux/34.md
@@ -1,3 +1,3 @@
 ![2022-02-11 19_37_17-Ubuntu_demo  Running  - Oracle VM VirtualBox](https://user-images.githubusercontent.com/55657279/153593030-6bd2dd65-2a43-4e38-8567-4567102bd25a.png)
 
-[Next >>](/1_installing_Linux/35.md)
+[Done]
