--- a/2_installing_NodeJS/2.md
+++ b/2_installing_NodeJS/2.md
@@ -1,3 +1,6 @@
+## Accept the SSH key
+![2022-02-11 22_30_32-PuTTY Security Alert](https://user-images.githubusercontent.com/55657279/153697420-b0a57eb0-b3df-4929-8357-7b664b45cadb.png)
+
 ![2022-02-11 21_57_17-Command Prompt](https://user-images.githubusercontent.com/55657279/153614941-81fcd6e6-e010-49cf-8cc8-df0aa041526d.png)
 
 [Next >>](3.md)
