--- a/2_installing_NodeJS/7.md
+++ b/2_installing_NodeJS/7.md
@@ -1,5 +1,5 @@
 ## Exit the editor
-Press ^X then press Y
+Press Ctrl+X then press Y
 
 ![2022-02-11 22_35_23-demo@demo_ ~](https://user-images.githubusercontent.com/55657279/153705691-7931473f-7eb6-4276-b0dd-b0156e487f4c.png)
 
