--- a/2_installing_NodeJS/8.md
+++ b/2_installing_NodeJS/8.md
@@ -4,6 +4,8 @@ Back to Windows and set the host info in the config file
 
 ![2022-02-11 21_43_40- ssh](https://user-images.githubusercontent.com/55657279/153613040-bbae8c9f-0d01-407c-98fc-12f4248f960b.png)
 
+Enter the following info and save the file
 
+![2022-02-11 22_37_40-config - Notepad](https://user-images.githubusercontent.com/55657279/153706020-b7ff5734-138b-40cc-8f27-b662d32bfb1f.png)
 
 [Next >>](9.md)
