--- a/2_installing_NodeJS/2.md
+++ b/2_installing_NodeJS/2.md
@@ -1,4 +1,4 @@
-## Accept the SSH key
+## Generate the key
 
 ![2022-02-11 21_57_17-Command Prompt](https://user-images.githubusercontent.com/55657279/153614941-81fcd6e6-e010-49cf-8cc8-df0aa041526d.png)
 
