--- a/2_installing_NodeJS/1.md
+++ b/2_installing_NodeJS/1.md
@@ -1,4 +1,8 @@
 ## Open PuTTY to connect to Ubuntu
 ![2022-02-11 22_29_16-PuTTY Configuration](https://user-images.githubusercontent.com/55657279/153697384-2efc4375-a79d-426c-8fef-dd9d1dc1d447.png)
 
+Accept the connection key
+
+![2022-02-11 22_30_32-PuTTY Security Alert](https://user-images.githubusercontent.com/55657279/153697420-b0a57eb0-b3df-4929-8357-7b664b45cadb.png)
+
 [Next >>](2.md)
