--- a/2_installing_NodeJS/3.md
+++ b/2_installing_NodeJS/3.md
@@ -1,5 +1,7 @@
 ## Create a key file
 
+Log in to Linux and open nano editor to store the SSH key
+
 ![2022-02-11 22_32_41-demo@demo_ ~](https://user-images.githubusercontent.com/55657279/153697454-62858ca8-e87e-4feb-91df-2b649b7fbc57.png)
 
 [Next >>](4.md)
