--- a/2_installing_NodeJS/4.md
+++ b/2_installing_NodeJS/4.md
@@ -1,5 +1,7 @@
 ## Open the created id_rsa.pub
 
+Back to Windows and open `id_rsa.pub` file, should be inside the `user_directory\.ssh`
+
 ![2022-02-11 22_33_24-](https://user-images.githubusercontent.com/55657279/153697527-feeb44fa-ece1-441a-89cf-46802272e30f.png)
 
 [Next >>](5.md)
