--- a/2_installing_NodeJS/4.md
+++ b/2_installing_NodeJS/4.md
@@ -1,4 +1,4 @@
-## Open the created id_rsa.pub
+## Open the generated id_rsa.pub
 
 Back to Windows and open `id_rsa.pub` file, should be inside the `user_directory\.ssh`
 
