--- a/2_installing_NodeJS/4.md
+++ b/2_installing_NodeJS/4.md
@@ -4,4 +4,8 @@ Back to Windows and open `id_rsa.pub` file, should be inside the `user_directory
 
 ![2022-02-11 22_33_24-](https://user-images.githubusercontent.com/55657279/153697527-feeb44fa-ece1-441a-89cf-46802272e30f.png)
 
+Copy the key content
+
+![2022-02-11 22_34_21-](https://user-images.githubusercontent.com/55657279/153705598-ded7454b-4807-4760-a7dc-579fea4a5dcf.png)
+
 [Next >>](5.md)
