--- a/2_installing_NodeJS/3.md
+++ b/2_installing_NodeJS/3.md
@@ -2,6 +2,12 @@
 
 Log in to Linux and open nano editor to store the SSH key
 
-![2022-02-11 22_32_41-demo@demo_ ~](https://user-images.githubusercontent.com/55657279/153697454-62858ca8-e87e-4feb-91df-2b649b7fbc57.png)
+Use the following commands to create a key file
+```
+mkdir .ssh
+cd .ssh
+nano authorization_keys
+```
+![2022-02-12 19_44_09-demo@demo_ ~_ ssh](https://user-images.githubusercontent.com/55657279/153711889-fb3a8251-58c5-4648-8acd-6c42e310f6d3.png)
 
 [Next >>](4.md)
