--- a/2_installing_NodeJS/3.md
+++ b/2_installing_NodeJS/3.md
@@ -1,13 +1,13 @@
 ## Create a key file
 
-Log in to Linux and open nano editor to store the SSH key
+Log in to Linux and use the following commands to store the SSH key
 
-Use the following commands to create a key file
 ```
 mkdir .ssh
 cd .ssh
 nano authorization_keys
 ```
+
 ![2022-02-12 19_44_09-demo@demo_ ~_ ssh](https://user-images.githubusercontent.com/55657279/153711889-fb3a8251-58c5-4648-8acd-6c42e310f6d3.png)
 
 [Next >>](4.md)
