--- a/2_installing_NodeJS/6.md
+++ b/2_installing_NodeJS/6.md
@@ -11,6 +11,6 @@ Then, press `Enter`
 
 Run `ll` command to see the created key file
 
-![2022-02-11 22_36_28-demo@demo_ ~](https://user-images.githubusercontent.com/55657279/153705806-38745f50-caa8-4a3e-ac2c-a5d99e84c5f3.png)
+![2022-02-12 19_49_34-demo@demo_ ~_ ssh](https://user-images.githubusercontent.com/55657279/153712047-a3c92cca-52cb-454c-9bf4-23712452fd53.png)
 
 [Next >>](8.md)
