--- a/2_installing_NodeJS/8.md
+++ b/2_installing_NodeJS/8.md
@@ -1,6 +1,6 @@
 ## Set the host info
 
-Back to Windows and set the host info in the config file
+Back to Windows and set the host info in the `config` file
 
 ![2022-02-11 21_43_40- ssh](https://user-images.githubusercontent.com/55657279/153613040-bbae8c9f-0d01-407c-98fc-12f4248f960b.png)
 
