--- a/2_installing_NodeJS/10.md
+++ b/2_installing_NodeJS/10.md
@@ -8,4 +8,24 @@ Select the ip of the Ubuntu (`192.168.1.115` in this case)
 
 ![2022-02-12 17_06_17-Visual Studio Code](https://user-images.githubusercontent.com/55657279/153706819-63a621bd-5b7e-47d2-b1d8-c21480b7598b.png)
 
+Press `Continue`
+
+![2022-02-12 19_26_15-Get Started - Visual Studio Code](https://user-images.githubusercontent.com/55657279/153712102-5c18626f-ba2f-4f35-86f1-23a4396c4bae.png)
+
+Enter password
+
+![2022-02-12 19_27_16-Get Started - Visual Studio Code](https://user-images.githubusercontent.com/55657279/153712205-41354083-fe33-4b3d-9d37-e71cbae409ad.png)
+
+Once connected, there would be the host name at the bottom left
+
+![2022-02-12 19_29_35-Get Started - Visual Studio Code](https://user-images.githubusercontent.com/55657279/153712214-cf45938e-e829-45e1-a946-0794570f576f.png)
+
+We can open the terminal clicking at the following menu
+
+![2022-02-12 19_34_21-Get Started - Visual Studio Code](https://user-images.githubusercontent.com/55657279/153712246-60963197-b55e-41e0-96be-4edc3b5fe893.png)
+
+Test the terminal by excuting `ll`
+
+![2022-02-12 19_35_17-Get Started - Visual Studio Code](https://user-images.githubusercontent.com/55657279/153712277-1c34919d-1cad-4a1b-985f-1f21f7b87a8f.png)
+
 [Next >>](11.md)
