--- a/2_setup_ssh_for_VS_code/10.md
+++ b/2_setup_ssh_for_VS_code/10.md
@@ -28,4 +28,4 @@ Test the terminal by excuting `ll`
 
 ![2022-02-12 19_35_17-Get Started - Visual Studio Code](https://user-images.githubusercontent.com/55657279/153712277-1c34919d-1cad-4a1b-985f-1f21f7b87a8f.png)
 
-[Next >>](11.md)
+[Done]
