--- a/5_installing_Mosquitto_NodeJS/1.md
+++ b/5_installing_Mosquitto_NodeJS/1.md
@@ -20,9 +20,6 @@ Create a new file `mqtt.js`
 
 ![2022-02-17 23_28_39-Window](https://user-images.githubusercontent.com/55657279/154526048-9cb79bcb-006f-46b8-a3da-05792c2b190b.png)
 
-Copy the NodeJS script from 
-https://github.com/thanasinb/Installing-Linux/blob/c54366d4923c58a57a88c99d2c16579273ec8b03/5_installing_Mosquitto_NodeJS/mqtt.js
-
-and paste it into `mqtt.js` and save the file
+Copy the NodeJS script from this [Link](https://github.com/thanasinb/Installing-Linux/blob/c54366d4923c58a57a88c99d2c16579273ec8b03/5_installing_Mosquitto_NodeJS/mqtt.js) and paste it into `mqtt.js` and save the file
 
 ![2022-02-17 23_31_42-Window](https://user-images.githubusercontent.com/55657279/154526642-0a0a6d91-6895-46b3-b329-1107bf5fc60f.png)
