--- a/5_installing_Mosquitto_NodeJS/1.md
+++ b/5_installing_Mosquitto_NodeJS/1.md
@@ -23,3 +23,11 @@ Create a new file `mqtt.js`
 Copy the NodeJS script from this [Link](https://github.com/thanasinb/Installing-Linux/blob/c54366d4923c58a57a88c99d2c16579273ec8b03/5_installing_Mosquitto_NodeJS/mqtt.js) and paste it into `mqtt.js` and save the file
 
 ![2022-02-17 23_31_42-Window](https://user-images.githubusercontent.com/55657279/154526642-0a0a6d91-6895-46b3-b329-1107bf5fc60f.png)
+
+In the terminal, enter the `mqtt_01` directory and run `node mqtt.js`
+
+![2022-02-17 23_37_17-Window](https://user-images.githubusercontent.com/55657279/154527734-95466400-35d8-485c-954a-1fb52ff868f5.png)
+
+Program the microcontroller to send a message `Hello from ESP8266` to topic `test`
+
+![2022-02-17 23_47_41-Window](https://user-images.githubusercontent.com/55657279/154529956-bfea4231-c5db-4dd8-87f8-30360d9bd5b8.png)
