--- a/5_installing_Mosquitto_NodeJS/1.md
+++ b/5_installing_Mosquitto_NodeJS/1.md
@@ -28,6 +28,6 @@ In the terminal, enter the `mqtt_01` directory and run `node mqtt.js`
 
 ![2022-02-17 23_37_17-Window](https://user-images.githubusercontent.com/55657279/154527734-95466400-35d8-485c-954a-1fb52ff868f5.png)
 
-Program the microcontroller to send a message `Hello from ESP8266` to topic `test`
+Program the microcontroller to send a message `Hello from ESP8266` to topic `test`. You will see the message in VS Code's terminal.
 
 ![2022-02-17 23_47_41-Window](https://user-images.githubusercontent.com/55657279/154529956-bfea4231-c5db-4dd8-87f8-30360d9bd5b8.png)
