--- a/5_installing_Mosquitto_NodeJS/1.md
+++ b/5_installing_Mosquitto_NodeJS/1.md
@@ -1,3 +1,5 @@
+## Prepare the NodeJS script file
+
 Open Ubuntu directory by clicking `Open Folder`
 
 ![2022-02-17 23_09_53-Window](https://user-images.githubusercontent.com/55657279/154522356-2fe907a0-dc80-4363-a922-bde5b2f6724b.png)
@@ -20,14 +22,4 @@ Create a new file `mqtt.js`
 
 ![2022-02-17 23_28_39-Window](https://user-images.githubusercontent.com/55657279/154526048-9cb79bcb-006f-46b8-a3da-05792c2b190b.png)
 
-Copy the NodeJS script from this [Link](https://github.com/thanasinb/Installing-Linux/blob/c54366d4923c58a57a88c99d2c16579273ec8b03/5_installing_Mosquitto_NodeJS/mqtt.js) and paste it into `mqtt.js` and save the file
-
-![2022-02-17 23_31_42-Window](https://user-images.githubusercontent.com/55657279/154526642-0a0a6d91-6895-46b3-b329-1107bf5fc60f.png)
-
-In the terminal, enter the `mqtt_01` directory and run `node mqtt.js`
-
-![2022-02-17 23_37_17-Window](https://user-images.githubusercontent.com/55657279/154527734-95466400-35d8-485c-954a-1fb52ff868f5.png)
-
-Program the microcontroller to send a message `Hello from ESP8266` to topic `test`. You will see the message in VS Code's terminal.
-
-![2022-02-17 23_47_41-Window](https://user-images.githubusercontent.com/55657279/154529956-bfea4231-c5db-4dd8-87f8-30360d9bd5b8.png)
+[Next](2.md)
