--- a/5_installing_Mosquitto_NodeJS/1.md
+++ b/5_installing_Mosquitto_NodeJS/1.md
@@ -6,4 +6,18 @@ Create a new file `mqtt.js`
 
 ![2022-02-17 23_28_39-Window](https://user-images.githubusercontent.com/55657279/154526048-9cb79bcb-006f-46b8-a3da-05792c2b190b.png)
 
+Try a simple `Hello script`
+```
+console.log('Hello World');
+```
+
+Run the above script by running the following command
+```
+node mqtt.js
+```
+
+The result should look like this
+
+![2022-02-19 12_44_05-mqtt js - demo  SSH_ 192 168 1 115  - Visual Studio Code](https://user-images.githubusercontent.com/55657279/154788242-2858d123-7831-4e92-bd4e-21004fcf7f67.png)
+
 [Next >>](2.md)
