--- a/Lab_7_1/1.md
+++ b/Lab_7_1/1.md
@@ -15,4 +15,12 @@ MongoClient.connect(url, function(err, db) {
 });
 ```
 
+Run the above script using
+
+```
+node mongo_demo.js
+```
+
+![2022-02-20 21_25_04-Window](https://user-images.githubusercontent.com/55657279/154847478-5ed79ced-16f9-4a6a-9329-3e795df460f6.png)
+
 [Next >>](2.md)
