--- a/Lab_7_1/1.md
+++ b/Lab_7_1/1.md
@@ -1,17 +1,21 @@
 ## Create a new database
 
-New database name `mongo_demo`
+New database name `mongo_demo` and a new collection (table) name `rfid`
 
-Once connected display `Database created!`
+Once connected display `Collection created!`
 
 ```
 var MongoClient = require('mongodb').MongoClient;
-var url = "mongodb://localhost:27017/mongo_demo";
+var url = "mongodb://localhost:27017/";
 
 MongoClient.connect(url, function(err, db) {
   if (err) throw err;
-  console.log("Database created!");
-  db.close();
+  var dbo = db.db("mongo_demo");
+  dbo.createCollection("rfid", function(err, res) {
+    if (err) throw err;
+    console.log("Collection created!");
+    db.close();
+  });
 });
 ```
 
@@ -21,6 +25,6 @@ Run the above script using
 node mongo_demo.js
 ```
 
-![2022-02-20 21_25_04-Window](https://user-images.githubusercontent.com/55657279/154847478-5ed79ced-16f9-4a6a-9329-3e795df460f6.png)
+![2022-02-20 21_38_43-Window](https://user-images.githubusercontent.com/55657279/154848033-25dd7909-d630-408b-86d7-e3d7611734cd.png)
 
 [Next >>](2.md)
