--- a/Lab_7_1/4.md
+++ b/Lab_7_1/4.md
@@ -21,4 +21,4 @@ Modify the previous script with the below one to avoid adding RFID twice
 
 ![2022-02-20 23_25_24-Window](https://user-images.githubusercontent.com/55657279/154852936-01ee121f-f31d-4a8e-b977-b915d00f239d.png)
 
-[Next >>](5.md)
+[Done!]
