--- a/7_MERN/1.md
+++ b/7_MERN/1.md
@@ -1,1 +1,23 @@
 # Frontend setup
+
+Go to the project home directory then run the following commands
+
+```
+npx create-react-app frontend
+npm install bootstrap
+npm install react-router-dom
+npm install axios
+```
+
+Run the below command to allow running React app on Ubuntu
+
+```
+echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+cat /proc/sys/fs/inotify/max_user_watches
+```
+
+Go insdie frontend directory and run
+
+```
+npm start
+```
