--- a/7_MERN/1.md
+++ b/7_MERN/1.md
@@ -3,6 +3,7 @@
 Go to the project home directory then run the following commands
 
 ```
+mkdir frontend
 npx create-react-app frontend
 npm install bootstrap
 npm install react-router-dom
